# tx-trading-engine

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  run.config  run.sh  vcpkg.json
cmake/: CPM.cmake  CompilerOptimizations.cmake  CompilerOptions.cmake  Dependencies.cmake  ProjectInfo.cmake  Sanitizers.cmake
docs/: COMPILER-MIGRATION.md
tools/: install-hooks.sh
tools/hooks/: pre-commit
tx-common/: CMakeLists.txt
tx-common/bench/: CMakeLists.txt  main.cpp  util.hpp
tx-common/bench/core/: result_bench.cpp  sizeof_check.cpp
tx-common/bench/ipc/: shared_memory_bench.cpp
tx-common/bench/net/fix/: parser_bench.cpp
tx-common/bench/net/taifex/: parser_bench.cpp
tx-common/bench/protocols/fix/: parser_bench.cpp
tx-common/bench/sync/: spsc_queue_bench.cpp
tx-common/include/tx/: error.hpp
tx-common/include/tx/core/: context_error.hpp  error.hpp  error_base.hpp  order_id.hpp  order_id_generator.hpp  price.hpp  quantity.hpp  result.hpp  side.hpp  type.hpp
tx-common/include/tx/io/: buf_reader.hpp  file.hpp  mapped_file.hpp  socket.hpp  socket_address.hpp  tcp_socket.hpp  udp_socket.hpp
tx-common/include/tx/ipc/: error.hpp  ipc_error.hpp  shared_memory.hpp
tx-common/include/tx/net/fix/: constains.hpp  error.hpp  message_builder.hpp  parser.hpp
tx-common/include/tx/net/taifex/: error.hpp  parser.hpp  wire_format.hpp
tx-common/include/tx/network/: address_error.hpp  error.hpp  socket.hpp  socket_address.hpp  socket_error.hpp  tcp_socket.hpp  udp_socket.hpp
tx-common/include/tx/protocols/fix/: constains.hpp  error.hpp  field.hpp  message_builder.hpp  parser.hpp
tx-common/include/tx/sync/: spsc_queue.hpp
tx-common/include/tx/sys/: cpu_affinity.hpp  tsc_timer.hpp
tx-common/src/: error.cpp
tx-common/src/core/: context_error.cpp  error.cpp  price.cpp  type.cpp
tx-common/src/io/: buf_reader.cpp  file.cpp  mapped_file.cpp  socket.cpp  socket_address.cpp  tcp_socket.cpp  udp_socket.cpp
tx-common/src/ipc/: error.cpp  ipc_error.cpp  shared_memory.cpp
tx-common/src/net/fix/: error.cpp  message_builder.cpp  parser.cpp
tx-common/src/net/taifex/: error.cpp  parser.cpp
tx-common/src/network/: address_error.cpp  error.cpp  socket.cpp  socket_address.cpp  socket_error.cpp  tcp_socket.cpp  udp_socket.cpp
tx-common/src/protocols/fix/: error.cpp  field.cpp  message_builder.cpp  parser.cpp
tx-common/src/sys/: cpu_affinity.cpp
tx-common/tests/: CMakeLists.txt
tx-common/tests/core/: price_test.cpp  result_test.cpp
tx-common/tests/io/: buf_reader_test.cpp  file_test.cpp  test_util.hpp
tx-common/tests/ipc/: shared_memory_test.cpp
tx-common/tests/net/fix/: message_builder_test.cpp  parser_test.cpp
tx-common/tests/net/taifex/: parser_test.cpp
tx-common/tests/protocols/fix/: message_builder_test.cpp  parser_test.cpp
tx-common/tests/sync/: spsc_queue_test.cpp
tx-common/tests/sys/: cpu_affinity_test.cpp
